<resources>
    <string name="app_name">Campus Quest</string>
    <string name="clickSteps">Count Steps</string>
    <string name="userLocation">null</string>
    <string name="yourLocation">Your Location</string>
    <string name="locationButton">Find your Location</string>
    <string name="statsButton">Stats</string>
    <string name="steps">0</string>
    <string name="stepsToday">Steps Today</string>
    <string name="title_activity_treasure_hunt">Treasure Hunt</string>
    <string name="title_activity_treasure_hunt_home">Treasure Hunt Home</string>
    <string name="new_game">New Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="statistics">Statistics</string>
    <string name="nav_header_title">CampusQuest</string>
    <string name="nav_header_subtitle">menu options subtitle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_quest">Choose your quest</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="clue">Clue</string>
    <string name="title_activity_character_sheet">Character Info</string>
    <string name="nav_home">Quest Hub</string>
    <string name="nav_leaderboard">Leaderboard</string>
    <string name="nav_google_stats">Fit Stats</string>
    <string name="nav_stats">Character Info</string>
    <string name="nav_sign_out">Exit CampusQuest</string>
    <string name="nav_about">About</string>
    <string name="nav_invite_friend">Invite a friend</string>
</resources>
