<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/treasure" />
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button_new_gamebutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="resumeGamePopUp"
        android:text="@string/new_game" />
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/button_resume_gamebutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="resumeGame"
        android:text="@string/resume_game" />

    <Button
        android:id="@+id/button_statistics"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:onClick="navigateToStats"
        android:text="@string/statistics" />
</LinearLayout>