<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="40sp"
            android:src="@drawable/treasure" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/button_new_gamebutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:onClick="newGame"
                android:text="@string/new_game" />
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/button_resume_gamebutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:onClick="resumeGame"
                android:text="@string/resume_game" />
            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/button_statistics"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/statistics" />
        </LinearLayout>
</LinearLayout>